@@ -2523,113 +2523,6 @@ Tcl_AllocStatBuf(void)
 }
 
 /*
- *---------------------------------------------------------------------------
- *
- * Tcl_Get*FromStat --
- *
- *	These functions provide portable read-only access to a Tcl_StatBuf.
- *
- * Results:
- *	The contents of the relevant field.
- *
- * Side effects:
- *	None.
- *
- *---------------------------------------------------------------------------
- */
-
-unsigned
-Tcl_GetFSDeviceFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return statBufPtr->st_dev;
-}
-
-unsigned
-Tcl_GetFSInodeFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return statBufPtr->st_ino;
-}
-
-unsigned
-Tcl_GetModeFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return statBufPtr->st_mode;
-}
-
-int
-Tcl_GetLinkCountFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return statBufPtr->st_nlink;
-}
-
-int
-Tcl_GetUserIdFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return statBufPtr->st_uid;
-}
-
-int
-Tcl_GetGroupIdFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return statBufPtr->st_gid;
-}
-
-int
-Tcl_GetDeviceTypeFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return statBufPtr->st_rdev;
-}
-
-Tcl_WideInt
-Tcl_GetAccessTimeFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return statBufPtr->st_atime;
-}
-
-Tcl_WideInt
-Tcl_GetModificationTimeFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return statBufPtr->st_mtime;
-}
-
-Tcl_WideInt
-Tcl_GetChangeTimeFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return statBufPtr->st_ctime;
-}
-
-Tcl_WideUInt
-Tcl_GetSizeFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return (Tcl_WideUInt) statBufPtr->st_size;
-}
-
-Tcl_WideUInt
-Tcl_GetBlocksFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return statBufPtr->st_blocks;
-}
-
-unsigned
-Tcl_GetBlockSizeFromStat(
-    Tcl_StatBuf *statBufPtr)
-{
-    return statBufPtr->st_blksize;
-}
-
-/*
  * Local Variables:
  * mode: c
  * c-basic-offset: 4
