@@ -31,10 +31,10 @@ test binary-0.1 {DupByteArrayInternalRep} {
 
 test binary-1.1 {Tcl_BinaryObjCmd: bad args} {
     list [catch {binary} msg] $msg
-} {1 {wrong # args: should be "binary option ?arg arg ...?"}}
+} {1 {wrong # args: should be "binary subcommand ?argument ...?"}}
 test binary-1.2 {Tcl_BinaryObjCmd: bad args} {
     list [catch {binary foo} msg] $msg
-} {1 {bad option "foo": must be format or scan}}
+} {1 {unknown or ambiguous subcommand "foo": must be format, or scan}}
 
 test binary-1.3 {Tcl_BinaryObjCmd: format error} {
     list [catch {binary f} msg] $msg
@@ -1541,7 +1541,7 @@ test binary-41.8 {ScanNumber: word alignment} littleEndian {
 test binary-42.1 {Tcl_BinaryObjCmd: bad arguments} {} {
     catch {binary ?} result
     set result
-} {bad option "?": must be format or scan}
+} {unknown or ambiguous subcommand "?": must be format, or scan}
 
 # Wide int (guaranteed at least 64-bit) handling
 test binary-43.1 {Tcl_BinaryObjCmd: format wide int} {} {
